--- a/mp.html
+++ b/mp.html
@@ -39,6 +39,7 @@
       <h2><a href="/ep.html">Even/Odd or Prime/Composite teller</a></h2>
       <h2><a href="/ve.html">Vaccine eligblitiy</a></h2>
       <h2><a href="/tm.html">My Team</a></h2>
+      <h2><a href="/cvs.html">CVS project</a></h2>
     </div>
 </body>
 </html>
