--- a/psp.html
+++ b/psp.html
@@ -21,7 +21,7 @@
           </div>
           <div class="para">
             <article>
-                Password:<input id="passwordBox" type="password" /></p> <a href="https://bit.ly/3nqJAC9"
+                Password:<input id="passwordBox" type="password" /></p> <a href="https://bit.ly/3nqJAC9" target="_blank"
                 onclick="return checkPassword();"> Click here to submit password and view Page </a>
             </article>
     </main>
