--- a/tm.html
+++ b/tm.html
@@ -35,7 +35,7 @@
             </div>
             <div class="head">
               <h2><a href="https://forms.gle/Tk62jeEsk6bSxfjDA" target="_blank">Click here to join my team</a></h2>
-              <h2><a href="/psp.html">Veiw my Team</a></h2>
+              <h2><a href="/psp.html" target="_blank">Veiw my Team</a></h2>
              </div>
 </body>
 
