--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
   <header class="text-gray-600 body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+      <marquee>
       <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
 
         <a href="https://hkdav18.github.io" class="mr-5 hover:text-gray-900 link"><img src="/images/hm.webp" alt="Home"
@@ -29,6 +30,7 @@
         <!--<a href="" target="_blank" class="mr-5 hover:text-gray-900 link">Himanshu</a>
                 <a href="/friends.html" class="mr-5 hover:text-gray-900 link">My friends</a>-->
       </nav>
+      </marquee>
     </div>
   </header>
 </body>
