--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
           style="width:50px"></a>
         <a href="javascript:location.reload()" class="mr-5 hover:text-gray-900 link"><img src="/images/rf.png" alt="Refresh"
             style="width:50px"></a>
+          </marquee>
       </a>
       <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
+        <marquee>
         <a href="/mp.html" class="mr-5 hover:text-gray-900 link">My Projects</a>
         <a href="/cd.html" class="mr-5 hover:text-gray-900 link">Coding Dream</a>
         <!--<a href="/family.html" class="mr-5 hover:text-gray-900 link">Family</a>-->
