--- a/mp.html
+++ b/mp.html
@@ -36,6 +36,7 @@
     <div class="head">
       <h2><a href="/lp.html">Lottery Program</a></h2>
       <h2><a href="/sc.html">Simple calculator</a></h2>
+      <h2><a href="/snake.html">Snake game</a></h2>
       <h2><a href="/ep.html">Even/Odd or Prime/Composite teller</a></h2>
       <h2><a href="/ve.html">Vaccine eligblitiy</a></h2>
       <h2><a href="/tm.html">My Team</a></h2>
