--- a/mp.html
+++ b/mp.html
@@ -20,12 +20,14 @@
           style="width:50px"></a>
       </a>
       <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-        <a href="/mp.html" class="mr-5 hover:text-gray-900 link">My Projects</a>
-        <a href="/cd.html" class="mr-5 hover:text-gray-900 link">Coding Dream</a>
-        <!--<a href="/family.html" class="mr-5 hover:text-gray-900 link">Family</a>-->
-        <a href="https://bit.ly/3amrbCX" target="_blank" class="mr-5 hover:text-gray-900 link">Science gamez</a>
-        <!--<a href="" target="_blank" class="mr-5 hover:text-gray-900 link">Himanshu</a>
-                <a href="/friends.html" class="mr-5 hover:text-gray-900 link">My friends</a>-->
+        <marquee>
+          <a href="/mp.html" class="mr-5 hover:text-gray-900 link">My Projects</a>
+          <a href="/cd.html" class="mr-5 hover:text-gray-900 link">Coding Dream</a>
+          <!--<a href="/family.html" class="mr-5 hover:text-gray-900 link">Family</a>-->
+          <a href="https://bit.ly/3amrbCX" target="_blank" class="mr-5 hover:text-gray-900 link">Science gamez</a>
+          <!--<a href="" target="_blank" class="mr-5 hover:text-gray-900 link">Himanshu</a>
+        <a href="/friends.html" class="mr-5 hover:text-gray-900 link">My friends</a>-->
+        </marquee>
       </nav>
     </div>
   </header>
@@ -36,6 +38,7 @@
     <div class="head">
       <h2><a href="/lp.html">Lottery Program</a></h2>
       <h2><a href="/sc.html">Simple calculator</a></h2>
+      <h2><a href="/spotify.html">Spotify</a></h2>
       <h2><a href="/snake.html">Snake game</a></h2>
       <h2><a href="/ep.html">Even/Odd or Prime/Composite teller</a></h2>
       <h2><a href="/ve.html">Vaccine eligblitiy</a></h2>
