--- a/index.html
+++ b/index.html
@@ -14,24 +14,23 @@
 <body>
   <header class="text-gray-600 body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-        <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
+      <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
         <a href="https://hkdav18.github.io" class="mr-5 hover:text-gray-900 link"><img src="/images/hm.webp" alt="Home"
-          style="width:50px"></a>
-        <a href="javascript:location.reload()" class="mr-5 hover:text-gray-900 link"><img src="/images/rf.png" alt="Refresh"
-            style="width:50px"></a>
-         </a>
+            style="width: 50px" /></a>
+        <a href="javascript:location.reload()" class="mr-5 hover:text-gray-900 link"><img src="/images/rf.png"
+            alt="Refresh" style="width: 50px" /></a>
+      </a>
       <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
         <marquee>
-        <a href="/mp.html" class="mr-5 hover:text-gray-900 link">My Projects</a>
-        <a href="/cd.html" class="mr-5 hover:text-gray-900 link">Coding Dream</a>
-        <!--<a href="/family.html" class="mr-5 hover:text-gray-900 link">Family</a>-->
-        <a href="https://bit.ly/3amrbCX" target="_blank" class="mr-5 hover:text-gray-900 link">Science gamez</a>
-        <!--<a href="" target="_blank" class="mr-5 hover:text-gray-900 link">Himanshu</a>
+          <a href="/mp.html" class="mr-5 hover:text-gray-900 link">My Projects</a>
+          <a href="/cd.html" class="mr-5 hover:text-gray-900 link">Coding Dream</a>
+          <!--<a href="/family.html" class="mr-5 hover:text-gray-900 link">Family</a>-->
+          <a href="https://bit.ly/3amrbCX" target="_blank" class="mr-5 hover:text-gray-900 link">Science gamez</a>
+          <!--<a href="" target="_blank" class="mr-5 hover:text-gray-900 link">Himanshu</a>
         <a href="/friends.html" class="mr-5 hover:text-gray-900 link">My friends</a>-->
         </marquee>
-       </nav>
+      </nav>
     </div>
   </header>
 </body>
-
 </html>
