--- a/tm.html
+++ b/tm.html
@@ -21,12 +21,15 @@
           style="width:50px"></a>
       </a>
       <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-        <a href="/mp.html" class="mr-5 hover:text-gray-900 link">My Projects</a>
-        <a href="/cd.html" class="mr-5 hover:text-gray-900 link">Coding Dream</a>
-        <!--<a href="/family.html" class="mr-5 hover:text-gray-900 link">Family</a>-->
-        <a href="https://bit.ly/3amrbCX" target="_blank" class="mr-5 hover:text-gray-900 link">Science gamez</a>
-        <!--<a href="" target="_blank" class="mr-5 hover:text-gray-900 link">Himanshu</a>
-                <a href="/friends.html" class="mr-5 hover:text-gray-900 link">My friends</a>-->
+        <marquee>
+          <a href="/mp.html" class="mr-5 hover:text-gray-900 link">My Projects</a>
+          <a href="/cd.html" class="mr-5 hover:text-gray-900 link">Coding Dream</a>
+          <!--<a href="/family.html" class="mr-5 hover:text-gray-900 link">Family</a>-->
+          <a href="https://bit.ly/3amrbCX" target="_blank" class="mr-5 hover:text-gray-900 link">Science gamez</a>
+          <!--<a href="" target="_blank" class="mr-5 hover:text-gray-900 link">Himanshu</a>
+        <a href="/friends.html" class="mr-5 hover:text-gray-900 link">My friends</a>-->
+        </marquee>
+      </nav>
               </div>
           </header>
           <main>
