--- a/ve.html
+++ b/ve.html
@@ -22,12 +22,14 @@
             style="width:50px"></a>
       </a>
       <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-        <a href="/mp.html" class="mr-5 hover:text-gray-900 link">My Projects</a>
-        <a href="/cd.html" class="mr-5 hover:text-gray-900 link">Coding Dream</a>
-        <!--<a href="/family.html" class="mr-5 hover:text-gray-900 link">Family</a>-->
-        <a href="https://bit.ly/3amrbCX" target="_blank" class="mr-5 hover:text-gray-900 link">Science gamez</a>
-        <!--<a href="" target="_blank" class="mr-5 hover:text-gray-900 link">Himanshu</a>
-                <a href="/friends.html" class="mr-5 hover:text-gray-900 link">My friends</a>-->
+        <marquee>
+          <a href="/mp.html" class="mr-5 hover:text-gray-900 link">My Projects</a>
+          <a href="/cd.html" class="mr-5 hover:text-gray-900 link">Coding Dream</a>
+          <!--<a href="/family.html" class="mr-5 hover:text-gray-900 link">Family</a>-->
+          <a href="https://bit.ly/3amrbCX" target="_blank" class="mr-5 hover:text-gray-900 link">Science gamez</a>
+          <!--<a href="" target="_blank" class="mr-5 hover:text-gray-900 link">Himanshu</a>
+        <a href="/friends.html" class="mr-5 hover:text-gray-900 link">My friends</a>-->
+        </marquee>
       </nav>
       <button onclick="happy()" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0 link">Vaccine eligblitiy
         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
