--- a/ps.html
+++ b/ps.html
@@ -18,13 +18,13 @@
           </div>
           <div class="head">
             <h2>Nickname of my bestfriend is the password to next page(I have two best friend but i know one's nickname only).
-                enter the passwordto veiw special quiz.
+                enter the password to veiw special quiz.
             </h2>
           </div>
           <div class="para">
             <article>
-                Password:<input id="passwordBox" type="password" /></p> <a href="/quiz.html" target="_blank"
-                onclick="return checkPassword();"> Click here to submit password and view Page </a>
+                Password:<input id="passwordBox" type="password" /></p> <a href="/quiz.html"
+             onclick="return checkPassword();"> Click here to submit password and view Page </a>
             </article>
     </main>
     </body>
