--- a/quiz.html
+++ b/quiz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -22,14 +22,14 @@
           style="width:50px"></a>
       </a>
       <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-        <marquee>
+        <marquee>-->
           <a href="/mp.html" class="mr-5 hover:text-gray-900 link">My Projects</a>
           <a href="/cd.html" class="mr-5 hover:text-gray-900 link">Coding Dream</a>
           <!--<a href="/family.html" class="mr-5 hover:text-gray-900 link">Family</a>-->
           <a href="https://bit.ly/3amrbCX" target="_blank" class="mr-5 hover:text-gray-900 link">Science gamez</a>
           <!--<a href="" target="_blank" class="mr-5 hover:text-gray-900 link">Himanshu</a>
         <a href="/friends.html" class="mr-5 hover:text-gray-900 link">My friends</a>-->
-        </marquee>
+        <!--</marquee>
       </nav>
     </div>
   </header>
@@ -74,7 +74,7 @@
         <button id="demo4" onclick="c4()">Check your answer</button>
       </article>
       <article>
-        <!--Q-5) which place of india is also known as the "land of rising sun"? <br />
+        Q-5) which place of india is also known as the "land of rising sun"? <br />
         A-5) <input id="a5" type="text" /> <br />
         <button id="demo5" onclick="c5()">Check your answer</button>
       </article>
@@ -102,8 +102,8 @@
         Q-10) Name the national bird of India. <br />
         A-1) <input id="a10" type="text" /> <br />
         <button id="demo10" onclick="c10()">Check your answer</button>
-      </article>-->
+      </article>
     </div>
   </main>
 </body>
-</html>
+</html>-->
