--- a/quiz.html
+++ b/quiz.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -22,14 +22,14 @@
           style="width:50px"></a>
       </a>
       <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-        <marquee>-->
+        <marquee>
           <a href="/mp.html" class="mr-5 hover:text-gray-900 link">My Projects</a>
           <a href="/cd.html" class="mr-5 hover:text-gray-900 link">Coding Dream</a>
           <!--<a href="/family.html" class="mr-5 hover:text-gray-900 link">Family</a>-->
           <a href="https://bit.ly/3amrbCX" target="_blank" class="mr-5 hover:text-gray-900 link">Science gamez</a>
           <!--<a href="" target="_blank" class="mr-5 hover:text-gray-900 link">Himanshu</a>
         <a href="/friends.html" class="mr-5 hover:text-gray-900 link">My friends</a>-->
-        <!--</marquee>
+        </marquee>
       </nav>
     </div>
   </header>
@@ -39,6 +39,11 @@
     </div>
     <div class="head">
       <h2>Now its time to test yourself.</h2>
+    </div>
+    <div class="para">
+      <article>
+        I have two best frnds on which i can trurst. and i also have some evil frnds.
+      </article>
     </div>
     <div class="head">
       <h2>Remember -</h2>
@@ -64,21 +69,21 @@
         <button id="demo2" onclick="c2()">Check your answer</button>
       </article>
       <article>
-        Q-3) I have two enemy friends in todays date. name my first enemy friend<br />
+        Q-3) Name my first evil frnd<br />
         A-3) <input id="a3" type="text" /> <br />
         <button id="demo3" onclick="c3()">Check your answer</button>
       </article>
       <article>
-        Q-4)I have two enemy friends in todays date. name my second enemy friend<br />
+        Q-4)Name my second evil frnd<br />
         A-4) <input id="a4" type="text" /> <br />
         <button id="demo4" onclick="c4()">Check your answer</button>
       </article>
       <article>
-        Q-5) which place of india is also known as the "land of rising sun"? <br />
+        Q-5) Name my third evil frnd <br />
         A-5) <input id="a5" type="text" /> <br />
         <button id="demo5" onclick="c5()">Check your answer</button>
       </article>
-      <article>
+      <!--<article>
         Q-6) In which year India got Independence? <br />
         A-6) <input id="a6" type="text" /> <br />
         <button id="demo6" onclick="c6()">Check your answer</button>
@@ -102,8 +107,8 @@
         Q-10) Name the national bird of India. <br />
         A-1) <input id="a10" type="text" /> <br />
         <button id="demo10" onclick="c10()">Check your answer</button>
-      </article>
+      </article>-->
     </div>
   </main>
 </body>
-</html>-->
+</html>
