--- a/mp.html
+++ b/mp.html
@@ -38,7 +38,7 @@
     <div class="head">
       <h2><a href="/lp.html">Lottery Program</a></h2>
       <h2><a href="/sc.html">Simple calculator</a></h2>
-      <h2><a href="/quiz.html">Quiz on friends</a></h2>
+      <h2><a href="/ps.html">only real best frnd can open</a></h2>
       <h2><a href="/spotify.html">Spotify</a></h2>
       <h2><a href="/snake.html">Snake game</a></h2>
       <h2><a href="/ep.html">Even/Odd or Prime/Composite teller</a></h2>
