--- a/ps.html
+++ b/ps.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -17,16 +17,15 @@
             <h1>Riddle for you</h1>
           </div>
           <div class="head">
-            <h2>Nickname of my bestfriend is the password to next page(I have two best friend but i know one's nickname only).
-                enter the password to veiw special quiz.
+            <h2>the password is nickname of two besties use no capital. best of luck.
             </h2>
           </div>
           <div class="para">
             <article>
-                Password:<input id="passwordBox" type="password" /></p> <a href="/quiz.html"
+                Password:<input id="passwordBox" type="password" /></p> <a href="/da.html"
              onclick="return checkPassword();"> Click here to submit password and view Page </a>
             </article>
     </main>
     </body>
 
-</html>-->
+</html>
