--- a/da.html
+++ b/da.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="/images/da" alt="">
+    <img src="/images/da.png" alt="">
 </body>
 </html>
