--- a/ps.html
+++ b/ps.html
@@ -22,7 +22,7 @@
           </div>
           <div class="para">
             <article>
-                Password:<input id="passwordBox" type="password" /></p> <a href="/da.html"
+                Password:<input id="passwordBox" type="password" /></p> <a href="/.html"
              onclick="return checkPassword();"> Click here to submit password and view Page </a>
             </article>
     </main>
