--- a/quiz.html
+++ b/quiz.html
@@ -42,7 +42,7 @@
     </div>
     <div class="para">
       <article>
-        I have two best frnds on which i can trurst. and i also have some evil frnds.
+        I have two best frnds and some frnds on which i can trurst.
       </article>
     </div>
     <div class="head">
@@ -69,17 +69,17 @@
         <button id="demo2" onclick="c2()">Check your answer</button>
       </article>
       <article>
-        Q-3) Name my first evil frnd<br />
+        Q-3) Name some of my frnds<br />
         A-3) <input id="a3" type="text" /> <br />
         <button id="demo3" onclick="c3()">Check your answer</button>
       </article>
       <article>
-        Q-4)Name my second evil frnd<br />
+        Q-4)Name my first dush***<br />
         A-4) <input id="a4" type="text" /> <br />
         <button id="demo4" onclick="c4()">Check your answer</button>
       </article>
       <article>
-        Q-5) Name my third evil frnd <br />
+        Q-5) Name my second dush*** <br />
         A-5) <input id="a5" type="text" /> <br />
         <button id="demo5" onclick="c5()">Check your answer</button>
       </article>
