--- a/quiz.html
+++ b/quiz.html
@@ -74,12 +74,12 @@
         <button id="demo3" onclick="c3()">Check your answer</button>
       </article>
       <article>
-        Q-4)Name my first dush***<br />
+        Q-4)Name my first evi* frnd<br />
         A-4) <input id="a4" type="text" /> <br />
         <button id="demo4" onclick="c4()">Check your answer</button>
       </article>
       <article>
-        Q-5) Name my second dush*** <br />
+        Q-5) Name my second evi* frnd <br />
         A-5) <input id="a5" type="text" /> <br />
         <button id="demo5" onclick="c5()">Check your answer</button>
       </article>
