--- a/index.html
+++ b/index.html
@@ -32,5 +32,22 @@
       </nav>
     </div>
   </header>
+  <main>
+    <div class="main">
+      <h1>Patna Lovers</h1>
+    </div>
+    <div class="head">
+      <h2>Patna winnings without pardeep</h2>
+    </div>
+    <div class="para">
+      <article>
+        Patna is a op team. Patna can do anthing
+      </article>
+    </div>
+    <div class="divssss">
+      <img src="/images/3.jpg" alt="Patna op"/>
+    </div>
+    
+  </main>
 </body>
 </html>
