--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="para">
       <article>
-        Patna is a op team. Patna can do anthing
+        Patna can do anthing
       </article>
     </div>
     <div class="divssss">
