--- a/index.html
+++ b/index.html
@@ -34,20 +34,16 @@
   </header>
   <main>
     <div class="main">
-      <h1>Patna Lovers</h1>
+      <h1>Hitesh Khatri</h1>
     </div>
     <div class="head">
-      <h2>Patna winnings without pardeep</h2>
+      <h2>Are you fine ??</h2>
     </div>
     <div class="para">
       <article>
-        Patna can do anthing
+        Jaao mere projects dekho.
       </article>
     </div>
-    <div class="divssss">
-      <img src="/images/3.jpg" alt="Patna op"/>
-    </div>
-    
   </main>
 </body>
 </html>
