--- a/mp.html
+++ b/mp.html
@@ -33,7 +33,7 @@
   </header>
   <main>
     <div class="main">
-      <h1>My projects are gg</h1>
+      <h1>My projects.</h1>
     </div>
     <div class="head">
       <h2><a href="/lp.html">Lottery Program</a></h2>
