--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css" />
   <script src="work.js"></script>
+  
 </head>
 
 <body>
@@ -45,5 +46,17 @@
       </article>
     </div>
   </main>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6442186059542662"
+     crossorigin="anonymous"></script>
+<!-- Try -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6442186059542662"
+     data-ad-slot="5578874558"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
