--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css" />
   <script src="work.js"></script>
-  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6442186059542662"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
