--- a/quiz.html
+++ b/quiz.html
@@ -74,20 +74,20 @@
         <button id="demo3" onclick="c3()">Check your answer</button>
       </article>
       <article>
-        <!--Q-4)Name my first evi* frnd he/she is stubborn<br />
+        Q-4)nan<br />
         A-4) <input id="a4" type="text" /> <br />
         <button id="demo4" onclick="c4()">Check your answer</button>
       </article>
       <article>
-        Q-5) Name my second evi* frnd he/she is stubborn <br />
+        Q-5)nan<br />
         A-5) <input id="a5" type="text" /> <br />
         <button id="demo5" onclick="c5()">Check your answer</button>
       </article>
       <article>
-        Q-6) Name my third evi* frnd he/she is stubborn <br />
+        Q-6) nan<br />
         A-6) <input id="a6" type="text" /> <br />
         <button id="demo6" onclick="c6()">Check your answer</button>
-      </article>--!>
+      </article>
       <!--<article>
         Q-7) In which month Indian constitution was completed? <br />
         A-7) <input id="a7" type="text" /> <br />
